# mommy

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  DEPENDENCY_AUDIT_REPORT.md  INTEGRATION_SUMMARY.md  PERFORMANCE_ANALYSIS.md  PKGBUILD  PLAN.md  README.md  TODO.md  renovate.json  rustfmt.toml
.cargo/: config.toml
.claude/: settings.json  settings.local.json
.claude/agents/: release-checker.md  security-reviewer.md
.claude/skills/add-mood/: SKILL.md
.claude/skills/release/: SKILL.md
.github/: copilot-instructions.md  dependabot.yml  renovate.json
.github/agents/: rust.agent.md
.github/instructions/: rust.instructions.md
.github/workflows/: build.yml  codeql.yml  dependabot-automerge.yml  jules-bug-fixer.yml  jules-ci-failure-fix.yml  jules-cleanup.yml  rust-clippy.yml  rust.yml
.planning/: PROJECT.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.serena/: project.yml
assets/: affirmations.json
debian/: changelog  control  copyright  install  rules
examples/: test_moods.sh
src/: affirmations.rs  color.rs  config.rs  main.rs  mommy.rs  state.rs  utils.rs
