[workspace]
resolver = "2"

[package]
name = "shell-mommy"
version = "0.1.6"
authors = ["Mincy Queen <sleepymincy@proton.me>"]
edition = "2021"
description = "Affirmations in your terminal! Now with cargo-mommy compatibility!"
license = "Unlicense"
repository = "https://github.com/Ven0m0/mommy"
keywords = ["mommy", "silly", "shell", "cli"]
categories = ["command-line-utilities"]
readme = "README.md"
include = ["src/**/*", "LICENSE", "README.md"]
exclude = [".github"]

[[bin]]
name = "mommy"
path = "src/main.rs"

[features]
default = []
beg = []

[dependencies]
fastrand = "2.3.0"
owo-colors = "4.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[profile.release]
codegen-units = 1
strip = true
lto = "fat"
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
panic = "abort"
rpath = false

[workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
# Install libssl-dev:arm64, see <https://github.com/cross-rs/cross/blob/main/docs/custom_images.md#adding-dependencies-to-existing-images>
pre-build = [
  "dpkg --add-architecture $CROSS_DEB_ARCH",
  "apt-get update -y && apt-get -y install libssl-dev:$CROSS_DEB_ARCH"
]
